# productive-numbers

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  master_analysis.sh
.github/workflows/: ci.yml  release.yml
docs/: ALGORITHM.md  RESULTS.md  THEORY.md  USAGE.md
scripts/: analyze_all_splits.py  verify_results.sh
src/: main.rs
