[package]
name = "productive-numbers"
version = "1.0.0"
edition = "2024"
authors = ["Santitub <santitub22@gmail.com>"]
description = "High-performance search and analysis of productive numbers (OEIS A089395)"
readme = "README.md"
homepage = "https://github.com/Santitub/productive-numbers"
repository = "https://github.com/Santitub/productive-numbers"
license = "MIT"
keywords = ["number-theory", "primes", "mathematics", "miller-rabin", "oeis"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
# Paralelismo de datos
rayon = "1.11.0"

# Interfaz de usuario (TUI)
indicatif = "0.18.3"

# Argumentos de línea de comandos
clap = { version = "4.5.54", features = ["derive"] }

# Manejo de señales (Ctrl+C)
ctrlc = "3.5.1"

# Serialización para persistencia de estado
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Formateo de números
num-format = "0.4.4"

# Timestamps
chrono = "0.4.42"

[profile.release]
opt-level = 3           # Máxima optimización
lto = true              # Link-Time Optimization
codegen-units = 1       # Mejor optimización (compilación más lenta)
panic = "abort"         # Menor tamaño de binario
strip = true            # Eliminar símbolos de debug

[profile.release-fast]
inherits = "release"
lto = "thin"            # LTO más rápido para desarrollo
codegen-units = 4

# Metadata para crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]